--- a/RedlineRestorationsLess/style.css
+++ b/RedlineRestorationsLess/style.css
@@ -645,7 +645,7 @@ background-image:url('images/redline-right-arrow-hover.png');
 
 .aboutus-individual-frame-text-fifth {
 	width:100%;
-	height:335px;
+	height:366px;
 }
 
 .aboutus-individual-frame-pictureframe {
@@ -706,7 +706,7 @@ background-image:url('images/redline-right-arrow-hover.png');
 }
 
 .aboutus-individual-frame-text-first h3 {
-	width: 200px;
+	width: 215px;
 float: left;
 margin-left: 18px;
 margin-top: 6px;
@@ -1812,6 +1812,12 @@ letter-spacing:1px;
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:100px;
+}
+
+.single-blog-viewport > img {
+width:1000px;
+height:auto;
+float:left;
 }
 
 .single-blog-content {
