--- a/RedlineRestorationsLess/style.css
+++ b/RedlineRestorationsLess/style.css
@@ -22,7 +22,7 @@ General comments (optional).
 }
 
 html {
-	background-image:url('images/body-background.png');
+	background-image:url('images/body-background.jpg');
 }
 
 body {
@@ -56,6 +56,7 @@ h6 {
 	margin-top:100px;
 	overflow:hidden;
 	margin-left:0%;
+        min-width:1000px;
 }
 
 .viewport-center{
@@ -112,15 +113,15 @@ h6 {
 }
 
 .content-panel-area.restorationsload {
-	left:-3021px;
+	left:-2014px;
 }
 
 .content-panel-area.blogload {
-	left:-4028px;
+	left:-3021px;
 }
 
 .content-panel-area.contactusload {
-	left:-5035px;
+	left:-4028px;
 }
 
 .one-big-page{
@@ -154,7 +155,7 @@ h6 {
 .fixed-menu-bar {
 	width:100%;
 	height:100px;
-	background-image:url('images/top-nav-background.png');
+	background-image:url('images/top-nav-background.jpg');
 	position:fixed;
 	top:0;
 	left:0;
@@ -419,6 +420,11 @@ h6 {
 	margin-left:43.7%;
 	margin-top:527px;
 	z-index:10000;
+}
+
+.aboutuspage.panel.one .down-arrow-hover {
+margin-top:0;
+bottom:0;
 }
 
 .aboutuspage.two .down-arrow-hover {
@@ -1069,6 +1075,12 @@ cursor:pointer;
 	margin-bottom: 23px;
 }
 
+img.mail-icon {
+margin: 0;
+margin-left: -17px;
+margin-top:6px;
+}
+
 .contactus-textpanel h4 {
 	font-family: 'BauerBodoniW01-RegItali';
 	font-size: 30px;
@@ -1118,7 +1130,7 @@ cursor:pointer;
 	text-align: left;
 	margin-left: 25px;
 	border-bottom:1px dotted #878787;
-	margin-bottom:68px;
+	margin-bottom:45px;
 }
 
 .contact-info h6 {
@@ -1403,29 +1415,29 @@ border:1px solid #ababab;
 .restorations-slider-left,.restorations-slider-right {
 	position:absolute;
 	z-index:100000000000000;
-	height:28px;
-	width:16px;
-	margin-left:20px;
+	height:39px;
+	width:46px;
+	margin-left:0px;
 	top:47%;
 	cursor:pointer;
 }
 
 .restorations-slider-left {
-	background-image:url('images/restorations-left-arrow.png');
+	background-image:url('images/restoration-left-arrow.png');
 }
 
 .restorations-slider-right {
-	background-image:url('images/restorations-right-arrow.png');
+	background-image:url('images/restoration-right-arrow.png');
 	right:0;
-	margin-right:20px;
+	margin-right:0px;
 }
 
 .restorations-slider-left:hover {
-	background-image:url('images/restorations-left-arrow-hover.png');
+	background-image:url('images/restoration-left-arrow-hover.png');
 }
 
 .restorations-slider-right:hover {
-	background-image:url('images/restorations-right-arrow-hover.png');
+	background-image:url('images/restoration-right-arrow-hover.png');
 }
 
 .restorations-individual-frame-text-first,.restorations-individual-frame-text-second,.restorations-individual-frame-text-third,.restorations-individual-frame-text-fourth,.restorations-individual-frame-text-fifth,.restorations-individual-frame-text-sixth,.restorations-individual-frame-text-seventh {
@@ -1833,6 +1845,15 @@ float:left;
 	float:left;
 }
 
+.single-blog-content a {
+color: #d91f2d;
+}
+
+.single-blog-content img {
+max-width: 545px;
+height:auto;
+}
+
 .single-blog-content-lines {
 	width:545px;
 	position:absolute;
@@ -1846,7 +1867,7 @@ float:left;
 	margin-left: 15px;
 	border-bottom: 1px solid #d91f2d;
 	padding-top: 30px;
-	padding-bottom: 20px;
+	padding-bottom: 12px;
 }
 
 .single-blog-header h2 {
@@ -1888,7 +1909,6 @@ float:left;
 	margin-left:15px;
 	width:480px;
 	color: #243942;
-	letter-spacing: 1px;
 	word-spacing: 1px;
 }
 
@@ -1914,6 +1934,7 @@ color: #243942;
 .single-blog-social h4 {
 	text-transform:uppercase;
 	margin-left:0px;
+        margin-bottom: 12px;
 }
 
 .single-blog-sidebar {
@@ -1928,6 +1949,7 @@ color: #243942;
         color:#d91f2d;
 text-transform:uppercase;
 margin-bottom:18px;
+letter-spacing: 3px;
 }
 
 .single-blog-sidebar > h3 span {
@@ -1938,16 +1960,26 @@ font-family:'Tw Cen W01 Bold';
 text-decoration:none;
 }
 
+.single-sidebar-single-image {
+width:424px;
+height:127px;
+background-repeat:no-repeat;
+margin-bottom:19px;
+background-size: 100% auto;
+background-position: 0 20%;
+border-radius:4px;
+}
+
 .single-sidebar-single {
 width:424px;
 height:127px;
-background-image:url('images/single-sidebar-blog.png');
-margin-bottom:19px;
+background-image:url('http://redlinerestorations.net/wp-content/uploads/2014/01/readmore-bg-panel-hover.png');
 padding-top: 28px;
+border-radius:4px;
 }
 
 .single-sidebar-single:hover {
-background-image:url('images/single-sidebar-blog-hover.png');
+background-image:url('http://redlinerestorations.net/wp-content/uploads/2014/01/readmore-bg-panel-new.png');
 cursor:pointer;
 }
 
@@ -1964,16 +1996,15 @@ border-bottom:1px solid rgba(0,0,0,0);
 padding-top:9px;
 padding-bottom:5px;
 text-decoration:none;
+text-transform: uppercase;
+text-align: center;
 }
 
 .return-to-blogs {
 width: 185px;
 float: right;
 margin-top: 15px;
-padding: 10px;
-background-color: #243942;
 text-align: center;
-border-radius: 50px;
 cursor: pointer;
 }
 
@@ -1987,10 +2018,11 @@ color: #fff;
 .footer{
 	position: fixed;
 	width: 100%;
-	height: 534px;
+        min-width:1000px;
+	height: 547px;
 	border-top: 7px solid #d91f2d;
-	bottom: -534px;
-	background-image:url('images/footer-background.png');
+	bottom: -442px;
+	background-image:url('images/footer-background.jpg');
 	z-index: 10000000000000000000;
 	color:#243942;
 }
@@ -2000,6 +2032,73 @@ color: #fff;
 	bottom:0px;
 	margin-top:100px;
 	float:left;
+        height:606px;
+}
+
+.footer-af {
+width: 100%;
+height: 100px;
+text-align: center;
+position: absolute;
+z-index: 5;
+}
+
+.footer-social-tab {
+	width:318px;
+	height:39px;
+        text-align:center;
+        margin-left:auto;
+        margin-right:auto;
+        background-image:url('images/af-bg.png');
+        margin-top:-1px;
+        cursor:pointer;
+}
+
+.footer-social-tab h3 {
+	color:#ffffff;
+	font-size:20px;
+	text-transform:uppercase;
+display:inline-block;
+text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.55);
+}
+
+.footer-social-tab p {
+display:inline-block;
+color:#ffffff;
+text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.55);
+font-size:20px;
+}
+
+.footer-social-tab p:first-of-type {
+margin-right:8px;
+}
+
+.footer-social-tab p:last-of-type {
+margin-left:8px;
+}
+
+.footer-social-tab span,.footer-close-tab span {
+	font-family:'Tw Cen W01 Bold';
+}
+
+.footer-af-icons {
+width:330px;
+margin-left:auto;
+margin-right:auto;
+margin-top:13px;
+}
+
+.footer-af-icons img {
+float:left;
+margin-right:40px;
+}
+
+.footer-af-icons a:last-of-type img {
+margin-right:0;
+}
+
+.footer-af-rr {
+margin-top:-5px;
 }
 
 .footer-wrap{
@@ -2009,6 +2108,7 @@ color: #fff;
 	margin-right:auto;
 	background-image:url('images/footer-background-lines.png');
 	background-repeat:no-repeat;
+        margin-top:100px;
 }
 
 .footer-left{
@@ -2026,44 +2126,10 @@ color: #fff;
 	float:left;
 }
 
-.footer-social-tab {
-	width:175px;
-	height:26px;
-	background-color:#d91f2d;
-	border-bottom:1px solid #e14c57;
-        text-align:center;
-}
-
-.footer-social-tab h3 {
-	color:white;
-	font-size:20px;
-	text-transform:uppercase;
-}
-
-.footer-social-tab span,.footer-close-tab span {
-	font-family:'Tw Cen W01 Bold';
-}
-
-.footer-close-tab {
-	width:175px;
-	height:26px;
-	position:absolute;
-	right:0;
-	cursor:pointer;
-	background-color:#d91f2d;
-	border-bottom:1px solid #e14c57;
-}
-
-.footer-close-tab h3 {
-	color:white;
-	font-size:20px;
-	text-align:center;
-	text-transform:uppercase;
-}
-
 .footer-facebook {
 	width:100%;
 	height:139px;
+margin-top:26px;
 }
 
 .footer-facebook > .social-icon {
@@ -2075,7 +2141,16 @@ color: #fff;
 	margin-left: 0px;
 	display: inline-block;
 	position: absolute;
-        margin-top:10px;
+        height: 100px!important;
+overflow: hidden;
+width: 298px;
+margin-left: 15px;
+margin-top: 30px;
+}
+
+.footer-facebook iframe {
+margin-top: -1px;
+margin-left: -1px;
 }
 
 .footer-twitter {
@@ -2185,6 +2260,11 @@ margin-top:13px;
 	font-size:13px;
 }
 
+.footer-right-bottom a {
+color:#868686;
+text-decoration:none;
+}
+
 /* Awards Section */
 
 .awards-section {
@@ -2283,9 +2363,9 @@ font-family:'Tw Cen W01 Medium';
 }
 
 .award-section-nav-left,.award-section-nav-right {
-width:51px;
-	height:38px;
-	background-image:url('images/button-left.png');
+width: 16px;
+height: 27px;
+background-image: url('images/redline-left-arrow.png');
 z-index:1000000;
 position:absolute;
 	top: 16%;
@@ -2297,17 +2377,38 @@ position:absolute;
 }
 
 .award-section-nav-left:hover{
-	background-image:url('images/button-left-hover.png');
+	background-image:url('images/redline-left-arrow-hover.png');
 }
 
 .award-section-nav-right {
 	right:0;
-	background-image:url('images/button-right.png');
+	background-image: url('images/redline-right-arrow.png');
 }
 
 .award-section-nav-right:hover{
-	background-image:url('images/button-right-hover.png');
+	background-image:url('images/redline-right-arrow-hover.png');
 }
+
+.fb-share-button {
+float:left;
+}
+
+#twitter-widget-0 {
+width:435px!important;
+margin-left:10px;
+}
+
+.social-icon-box #twitter-widget-0 {
+width:80px!important;
+float:left;
+}
+
+.IN-widget {
+float:left;
+margin-left:10px;
+margin-right:10px;
+}
+
 
 /* Comments Section */
 
@@ -2329,6 +2430,13 @@ font-family:'Tw Cen W01 Bold';
 
 #respond p {
 margin:0;
+}
+
+#respond p.comment-notes {
+font-style: italic;
+font-size: 14px;
+margin-top: 7px;
+margin-bottom: 7px;
 }
 
 .comment-form-author,.comment-form-email {
@@ -2357,6 +2465,7 @@ float: left;
 clear: left;
 margin-left: -9px;
 width: 247px;
+margin-top:-7px;
 background-size: 100% 100%;
 padding-left: 20px;
 }
@@ -2374,6 +2483,7 @@ height: 215px;
 margin-left: -9px;
 padding-top: 15px;
 padding-left: 15px;
+margin-top:-7px;
 }
 
 .comment-form-comment textarea:focus {
@@ -2415,6 +2525,12 @@ padding-left:15px;
 width:495px;
 }
 
+.comment-shadow {
+margin-top: 20px;
+margin-left: -12px;
+margin-bottom: 20px;
+}
+
 /* Comment Stuff */
 ol.commentlist { list-style:none; margin:0; padding:0; }
 ol.commentlist li { border:1px solid #d5d5d5; border-radius:5px; -moz-border-radius:5px; -webkit-border-radius:5px; margin:0 0 10px; padding:5px 7px 5px 64px; position:relative; }
@@ -2439,3 +2555,112 @@ ol.commentlist li ul.children li.depth-5 { margin:0 0 3px; }
 ol.commentlist ul.children li.odd { background:#fff; }
 ol.commentlist ul.children li.even { background:#f6f6f6; }
 ol.commentlist li.pingback div.vcard { padding:0 170px 0 0; }
+
+.flags-two {
+display:none;
+}
+
+@media (max-width:800px), handheld and (orientation: portrait) {
+
+.viewport-center,.one-big-page,.panel,.panel-one-slider {
+width:640px;
+}
+
+.content-panel {
+min-width:640px;
+}
+
+.panel-textbar {
+left:0;
+width:100%;
+height:110px;
+}
+
+.panel-textbar img {
+position:absolute;
+left:0;
+margin:0;
+margin-left:125px;
+margin-top:40px;
+}
+
+img.flags-two {
+display:block;
+margin-left:454px;
+}
+
+.panel-one-slider img {
+height:auto;
+width:100%;
+margin-top:117px;
+}
+
+.panel-one-slider h4 { margin-left:10px; margin-top:20px; }
+.panel-one-slider h5 { padding-top:40px; margin-left:0px; width: 100%; }
+.panel-slider-lines { display:none!important; }
+
+.homepage.panel.two > img {
+width:100%;
+height:auto;
+}
+
+.panel-textbar-horizontal {
+height:333px;
+}
+
+.panel-textbar-horizontal h2 {
+margin-left: 20px;
+margin-top: 75px;
+}
+
+.panel-textbar-horizontal h4 {
+width:375px;
+margin-top:68px;
+}
+
+.panel-textbar-horizontal h6 {
+margin-top:250px;
+width:100%;
+right:auto;
+}
+
+.panel-textbar-horizontal .bot-panel-slider-lines-small {
+margin-top:263px;
+margin-left:295px;
+right:auto;
+}
+
+
+}
+
+@media (min-width:1400px) {
+
+.fixed-menu-bar ul {
+margin-left:38%;
+}
+
+}
+
+@media (min-width:2200px) {
+
+.fixed-menu-bar ul {
+margin-left:42%;
+}
+
+}
+
+@media (min-width:3000px) {
+
+.fixed-menu-bar ul {
+margin-left:46%;
+}
+
+}
+
+@media (max-height:795px) {
+
+.footer {
+bottom:-547px;
+}
+
+}
